fixed bug: if toolbar is 'Always show' and alignment of popup is 'on top of a tab', toolbar overlaps preview

--- a/chrome/skin/classic/tabscope/overlay.css
+++ b/chrome/skin/classic/tabscope/overlay.css
@@ -121,8 +121,12 @@
 	border: none;
 }
 
-#tabscope-popup[_toolbardisplay="1"] #tabscope-preview {
+#tabscope-popup[_toolbardisplay="1"][_alignment="2"] #tabscope-preview {
 	margin-top: 22px;
+}
+
+#tabscope-popup[_toolbardisplay="1"][_alignment="1"] #tabscope-preview {
+	margin-bottom: 22px;
 }
 
 /* ::::: Windows (except Classic and third-party themes) ::::: */
